# Gsbreddy_notebooklens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  action.yml  mkdocs.yml  pyproject.toml
.github/: notebooklens-pr.example.yml
.github/workflows/: ci.yml  docs-pages.yml  release.yml
apps/: __init__.py
apps/api/: Dockerfile  __init__.py  alembic.ini  check_runs.py  config.py  database.py  github_app.py  job_runner.py  main.py  managed_github.py  models.py  notification_delivery.py  oauth.py  orchestration.py  review_workspace.py  reviewer_guidance.py  webhooks.py  worker.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260412_0001_create_managed_api_core_tables.py  20260412_0002_add_review_threads_and_notifications.py  20260412_0003_add_review_assets.py  20260412_0004_add_managed_ai_gateway_configs.py  20260412_0005_add_force_rebuild_to_snapshot_jobs.py  20260413_0006_add_github_mirror_jobs_and_pr_sync_state.py
apps/api/routes/: __init__.py  assets.py  auth.py  github.py  health.py  repo_access.py  reviews.py  settings.py
apps/web/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/reviews/[owner]/[repo]/pulls/[pullNumber]/: page.tsx
apps/web/app/reviews/[owner]/[repo]/pulls/[pullNumber]/settings/ai-gateway/: page.tsx
apps/web/app/reviews/[owner]/[repo]/pulls/[pullNumber]/snapshots/[snapshotIndex]/: page.tsx
apps/web/components/: ai-gateway-settings-form.tsx  ai-gateway-settings.tsx  review-route.tsx  review-workspace.tsx
apps/web/lib/: actions.ts  ai-gateway.test.ts  ai-gateway.ts  api.ts  review-workspace.test.ts  review-workspace.ts  types.ts
deploy/: .env.example  Caddyfile  docker-compose.yml  run-managed-service.sh
docs/: admin-ai-settings.md  examples.md  github-pr-sync.md  index.md  privacy.md  quickstart-action.md  quickstart-workspace.md  self-hosting.md  troubleshooting.md
scripts/: __init__.py  validate_docs.py
src/: __init__.py  claude_integration.py  diff_engine.py  github_action.py  github_api.py  review_core.py
tests/: test_api_skeleton.py  test_claude_redaction.py  test_diff_engine.py  test_docs_validation.py  test_integration.py  test_review_core.py  test_reviewer_guidance.py
tests/fixtures/: review_workspace_thread_base.ipynb  review_workspace_thread_head_v1.ipynb  review_workspace_thread_head_v2.ipynb  reviewer_guidance_training_base.ipynb  reviewer_guidance_training_head.ipynb  sales_forecast_plot_base.ipynb  sales_forecast_plot_head.ipynb
